set(libarch_a_VERDEP_SOURCES "video_sdl2.c")

include_directories(
        ../sdl
        ..
        ../..
        ../../drive
        ../../c64
        ../../c64/cart
        ../../c64dtv
        ../../c128
        ../../vic20
        ../../pet
        ../../cbm2
        ../../plus4
        ../../raster
        ../../rs232drv
        ../../samplerdrv
        ../../sid
        ../../userport
        ../../vdrive
        ../../video
        ../../lib/p64
        ../../joyport
        ../../gfxoutputdrv
        ../../tapeport
        ../../imagecontents
)

add_library(arch
        archdep.c
        blockdev.c
        console.c
        console_unix.c
        coproc.c
        dynlib.c
        fullscreen.c
        icon.c
        joy.c
        kbd.c
        lightpendrv.c
        menu_c128hw.c
        menu_c64_common_expansions.c
        menu_c64_expansions.c
        menu_c64cart.c
        menu_c64dtvhw.c
        menu_c64hw.c
        menu_c64model.c
        menu_cbm2cart.c
        menu_cbm2hw.c
        menu_common.c
        menu_debug.c
        menu_drive.c
        menu_drive_rom.c
        menu_edit.c
        menu_ethernet.c
        menu_ethernetcart.c
        menu_ffmpeg.c
        menu_help.c
        menu_jam.c
        menu_joyport.c
        menu_joystick.c
        menu_media.c
        menu_midi.c
        menu_monitor.c
        menu_mouse.c
        menu_network.c
        menu_petcart.c
        menu_pethw.c
        menu_plus4cart.c
        menu_plus4hw.c
        menu_printer.c
        menu_ram.c
        menu_reset.c
        menu_rom.c
        menu_rs232.c
        menu_sampler.c
        menu_scpu64hw.c
        menu_screenshot.c
        menu_settings.c
        menu_sid.c
        menu_snapshot.c
        menu_sound.c
        menu_speed.c
        menu_tape.c
        menu_vic20cart.c
        menu_vic20hw.c
        menu_video.c
        mousedrv.c
        rawnetarch.c
        rs232dev.c
        sdlmain.c
        signals.c
        ui.c
        uifilereq.c
        uifonts.c
        uifontscbm2.c
        uifontscrtc.c
        uifontsted.c
        uifontsvic.c
        uifontsvicii.c
        uihotkey.c
        uiimagefilereq.c
        uimenu.c
        uimon.c
        uimsgbox.c
        uipause.c
        uipoll.c
        uistatusbar.c
        ${libarch_a_VERDEP_SOURCES}
        vkbd.c
        vsidui.c
        vsyncarch.c
        x128_ui.c
        x64_ui.c
        x64dtv_ui.c
        x64sc_ui.c
        xcbm2_ui.c
        xpet_ui.c
        xplus4_ui.c
        xscpu64_ui.c
        xvic_ui.c
)
